# zero2prod

./: Cargo.toml  Dockerfile  app-spec.yaml  config.toml  config.yaml  rustfmt.toml
.github/workflows/: deny.yml  general.yaml  general.yml
.sqlx/: query-a7e11f3741bbeb419933146f8ee6da97b96b8d39fcf402f09ebb3a0d2bf6762a.json  query-bcfcfebc6f5e8ffbf97d97c5a209be78b46d703924482cf8b43842705fcb7714.json  query-e31fe138269b05ca047718fdfcd177596bdce6f8fa8ff332b095b8f2996b094c.json  query-ed279fc2dda0c3ede3e81a4500fcaa9da2220f8a9ad6c1debc3095deb9f84759.json
config/: base.toml  base.yaml  dev.toml  dev.yaml  prod.toml  prod.yaml
migrations/: 20250430150544_create_subscriptions_table.sql  20251025071128_create_subscriptions_table.sql
scripts/: init_db.sh  setup_database.sh
src/: app.rs  config.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: email.rs  subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  subscribe.rs  utils.rs
tests/api/: health_check.rs  main.rs  subscriptions.rs
