[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
axum = "0.8.6"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
claims = "0.8.0"
config = "0.15.18"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["request-id", "trace"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.18.1", features = ["v4"] }
validator = "0.20.0"

[dev-dependencies]
fake = "4.4.0"
percent-encoding = "2.3.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
rand = "0.9.2"
reqwest = "0.12.24"
